--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
-      <!-- !!!!!!!!!!!!!!!!!!!!!!!! ADVENTAGES  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+    <!-- !!!!!!!!!!!!!!!!!!!!!!!! ADVENTAGES  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
-      <section class="section-adventages">
+    <section class="section-adventages">
         <div class="container">
           <h2 class="title-adventages visually-hidden">adventages</h2>
           <ul class="list-adventages">
@@ -123,9 +123,9 @@
         </div>
       </section>
 
-      <!-- !!!!!!!!!!!!!!!!!!!!!!!! TEAM  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+    <!-- !!!!!!!!!!!!!!!!!!!!!!!! TEAM  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
-      <section class="section-team">
+    <section class="section-team">
         <div class="container">
           <h2 class="title-team">Our Team</h2>
           <ul class="img-item">
@@ -345,9 +345,9 @@
         </div>
       </section>
 
-      <!-- !!!!!!!!!!!!!!!!!!!!!!!! PORTFOLIO !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+    <!-- !!!!!!!!!!!!!!!!!!!!!!!! PORTFOLIO !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
-      <section class="section-portfolio">
+    <!-- <section class="section-portfolio">
         <div class="container">
           <h2 class="title-portfolio">Our Portfolio</h2>
           <ul class="list-portfolio">
@@ -457,10 +457,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!-- !!!!!!!!!!!!!!!!!!!!!!!! FOOTER  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-    </main>
+    <!-- !!!!!!!!!!!!!!!!!!!!!!!! FOOTER  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+    <!-- </main>
     <footer class="footer">
       <div class="container footer-style">
         <div class="footer-style-container">
@@ -631,6 +631,6 @@
           <button type="submit" class="submit-button">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
