--- a/index.html
+++ b/index.html
@@ -130,7 +130,13 @@
           <h2 class="title-team">Our Team</h2>
           <ul class="img-item">
             <li class="img-list">
-              <img src="./images/1.jpg" alt="Mark Guerrero" width="264" />
+              <img
+                srcset="./images/team/mark-guerrero@2x.jpg 2x"
+                src="./images/team/mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
               <div class="team-container">
                 <h3 class="img-item-list">Mark Guerrero</h3>
                 <p class="text-item-team">Product Designer</p>
@@ -183,7 +189,13 @@
               </div>
             </li>
             <li class="img-list">
-              <img src="./images/2.jpg" alt="Tom Ford" width="264" />
+              <img
+                srcset="./images/team/tom-ford@2x.jpg 2x"
+                src="./images/team/tom-ford.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
               <div class="team-container">
                 <h3 class="img-item-list">Tom Ford</h3>
                 <p class="text-item-team">Frontend Developer</p>
@@ -236,7 +248,13 @@
               </div>
             </li>
             <li class="img-list">
-              <img src="./images/3.jpg" alt="Camila Garcia" width="264" />
+              <img
+                srcset="./images/team/camila-garcia@2x.jpg 2x"
+                src="./images/team/camila-garcia.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
               <div class="team-container">
                 <h3 class="img-item-list">Camila Garcia</h3>
                 <p class="text-item-team">Marketing</p>
@@ -289,7 +307,13 @@
               </div>
             </li>
             <li class="img-list">
-              <img src="./images/4.jpg" alt="Daniel Wilson" width="264" />
+              <img
+                srcset="./images/team/daniel-wilson@2x.jpg 2x"
+                src="./images/team/daniel-wilson.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
               <div class="team-container">
                 <h3 class="img-item-list">Daniel Wilson</h3>
                 <p class="text-item-team">UI Designer</p>
@@ -347,7 +371,7 @@
 
     <!-- !!!!!!!!!!!!!!!!!!!!!!!! PORTFOLIO !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
-    <!-- <section class="section-portfolio">
+    <section class="section-portfolio">
         <div class="container">
           <h2 class="title-portfolio">Our Portfolio</h2>
           <ul class="list-portfolio">
@@ -457,7 +481,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
     <!-- !!!!!!!!!!!!!!!!!!!!!!!! FOOTER  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
     <!-- </main>
