update index html file

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
           <button class="hero-btn" type="button">Order Service</button>
         </div>
       </section>
-    <!-- !!!!!!!!!!!!!!!!!!!!!!!! ADVENTAGES  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+      <!-- !!!!!!!!!!!!!!!!!!!!!!!! ADVENTAGES  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
-    <section class="section-adventages">
+      <section class="section-adventages">
         <div class="container">
           <h2 class="title-adventages visually-hidden">adventages</h2>
           <ul class="list-adventages">
@@ -123,9 +123,9 @@
         </div>
       </section>
 
-    <!-- !!!!!!!!!!!!!!!!!!!!!!!! TEAM  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+      <!-- !!!!!!!!!!!!!!!!!!!!!!!! TEAM  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
-    <section class="section-team">
+      <section class="section-team">
         <div class="container">
           <h2 class="title-team">Our Team</h2>
           <ul class="img-item">
@@ -369,15 +369,27 @@
         </div>
       </section>
 
-    <!-- !!!!!!!!!!!!!!!!!!!!!!!! PORTFOLIO !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+      <!-- !!!!!!!!!!!!!!!!!!!!!!!! PORTFOLIO !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
-    <section class="section-portfolio">
+      <section class="section-portfolio">
         <div class="container">
           <h2 class="title-portfolio">Our Portfolio</h2>
           <ul class="list-portfolio">
             <li class="item-list-portfolio">
               <div class="portfolio-div-container">
-                <img src="./images/bankapp.jpg" alt="Banking App" width="360" />
+                <img
+                  srcset="
+                    ./images/portfolio/banking-app-mobile.jpg     288w,
+                    ./images/portfolio/banking-app-mobile@2x.jpg  576w,
+                    ./images/portfolio/banking-app-tablet.jpg     356w,
+                    ./images/portfolio/banking-app-tablet@2x.jpg  712w,
+                    ./images/portfolio/banking-app-desktop.jpg    360w,
+                    ./images/portfolio/banking-app-desktop@2x.jpg 720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                  src="./images/portfolio/banking-app-mobile.jpg"
+                  alt="Banking App"
+                />
                 <p class="text-div-portfolio">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -392,9 +404,17 @@
             <li class="item-list-portfolio">
               <div class="portfolio-div-container">
                 <img
-                  src="./images/marketing.jpg"
+                  srcset="
+                    ./images/portfolio/cashless-payment-mobile.jpg     288w,
+                    ./images/portfolio/cashless-payment-mobile@2x.jpg  576w,
+                    ./images/portfolio/cashless-payment-tablet.jpg     356w,
+                    ./images/portfolio/cashless-payment-tablet@2x.jpg  712w,
+                    ./images/portfolio/cashless-payment-desktop.jpg    360w,
+                    ./images/portfolio/cashless-payment-desktop@2x.jpg 720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                  src="./images/portfolio/cashless-payment-mobile.jpg"
                   alt="Cashless Payment"
-                  width="360"
                 />
                 <p class="text-div-portfolio">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -410,9 +430,17 @@
             <li class="item-list-portfolio">
               <div class="portfolio-div-container">
                 <img
-                  src="./images/meditationApp.jpg"
+                  srcset="
+                    ./images/portfolio/meditation-app-mobile.jpg     288w,
+                    ./images/portfolio/meditation-app-mobile@2x.jpg  576w,
+                    ./images/portfolio/meditation-app-tablet.jpg     356w,
+                    ./images/portfolio/meditation-app-tablet@2x.jpg  712w,
+                    ./images/portfolio/meditation-app-desktop.jpg    360w,
+                    ./images/portfolio/meditation-app-desktop@2x.jpg 720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                  src="./images/portfolio/meditation-app-mobile.jpg"
                   alt="Meditation App"
-                  width="360"
                 />
                 <p class="text-div-portfolio">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -428,9 +456,17 @@
             <li class="item-list-portfolio">
               <div class="portfolio-div-container">
                 <img
-                  src="./images/taxiService.jpg"
+                  srcset="
+                    ./images/portfolio/taxi-service-mobile.jpg     288w,
+                    ./images/portfolio/taxi-service-mobile@2x.jpg  576w,
+                    ./images/portfolio/taxi-service-tablet.jpg     356w,
+                    ./images/portfolio/taxi-service-tablet@2x.jpg  712w,
+                    ./images/portfolio/taxi-service-desktop.jpg    360w,
+                    ./images/portfolio/taxi-service-desktop@2x.jpg 720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                  src="./images/portfolio/taxi-service-mobile.jpg"
                   alt="Taxi Service"
-                  width="360"
                 />
                 <p class="text-div-portfolio">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -446,9 +482,17 @@
             <li class="item-list-portfolio">
               <div class="portfolio-div-container">
                 <img
-                  src="./images/screenIlustration.jpg"
+                  srcset="
+                    ./images/portfolio/screen-illustrations-mobile.jpg     288w,
+                    ./images/portfolio/screen-illustrations-mobile@2x.jpg  576w,
+                    ./images/portfolio/screen-illustrations-tablet.jpg     356w,
+                    ./images/portfolio/screen-illustrations-tablet@2x.jpg  712w,
+                    ./images/portfolio/screen-illustrations-desktop.jpg    360w,
+                    ./images/portfolio/screen-illustrations-desktop@2x.jpg 720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                  src="./images/portfolio/screen-illustrations-mobile.jpg"
                   alt="Screen Illustrations"
-                  width="360"
                 />
                 <p class="text-div-portfolio">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -464,9 +508,17 @@
             <li class="item-list-portfolio">
               <div class="portfolio-div-container">
                 <img
-                  src="./images/onlineCourses.jpg"
+                  srcset="
+                    ./images/portfolio/online-courses-mobile.jpg     288w,
+                    ./images/portfolio/online-courses-mobile@2x.jpg  576w,
+                    ./images/portfolio/online-courses-tablet.jpg     356w,
+                    ./images/portfolio/online-courses-tablet@2x.jpg  712w,
+                    ./images/portfolio/online-courses-desktop.jpg    360w,
+                    ./images/portfolio/online-courses-desktop@2x.jpg 720w
+                  "
+                  sizes="(min-width: 1158px) 360px, (min-width: 768px) 356px, (min-width: 320px) 288px"
+                  src="./images/portfolio/online-courses-mobile.jpg"
                   alt="Online Courses"
-                  width="360"
                 />
                 <p class="text-div-portfolio">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -483,8 +535,8 @@
         </div>
       </section>
 
-    <!-- !!!!!!!!!!!!!!!!!!!!!!!! FOOTER  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
-    <!-- </main>
+      <!-- !!!!!!!!!!!!!!!!!!!!!!!! FOOTER  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
+    </main>
     <footer class="footer">
       <div class="container footer-style">
         <div class="footer-style-container">
@@ -655,6 +707,6 @@
           <button type="submit" class="submit-button">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
