update index html file

--- a/index.html
+++ b/index.html
@@ -54,6 +54,80 @@
           </svg>
         </button>
       </div>
+      <div class="mob-menu">
+        <button type="button" class="close-menu-btn">
+          <svg width="24" height="24">
+            <use href="./images/icons.svg#icon-closes"></use>
+          </svg>
+        </button>
+        <nav class="navigation-mob">
+          <ul class="nav-list-mob">
+            <li>
+              <a class="nav-link-mob current" href="./index.html">Studio</a>
+            </li>
+            <li><a class="nav-link-mob" href="">Portfolio</a></li>
+            <li><a class="nav-link-mob" href="">Contacts</a></li>
+          </ul>
+        </nav>
+        <ul class="address-list-mob">
+            <li>
+              <a class="address-link-mobile" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="address-link-mobile" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="mob-ul-class">
+          <li class="mob-li-class">
+            <a
+              class="a-mob-class"
+              target="_blank"
+              href="https://www.instagram.com/"
+            >
+              <svg width="24" height="24" class="svg-mob-icons">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mob-li-class">
+            <a class="a-mob-class" target="_blank" href="https://twitter.com/">
+              <svg width="24" height="24" class="svg-mob-icons">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mob-li-class">
+            <a
+              class="a-mob-class"
+              target="_blank"
+              href="https://www.facebook.com/"
+            >
+              <svg width="24" height="24" class="svg-mob-icons">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mob-li-class">
+            <a
+              class="a-mob-class"
+              target="_blank"
+              href="https://www.linkedin.com/"
+            >
+              <svg width="24" height="24" class="svg-mob-icons">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <address class="address-mob">
+        
+        </address>
+      </div>
     </header>
 
     <!-- !!!!!!!!!!!!!!!!!!!!!!!! HERO  !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
