--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container header-container">
         <nav class="navigate">
           <a class="header-logo link" href="./index.html"
-            >Web<span>Studio</span></a
+            >Steffen<span>Wissmann</span></a
           >
           <button type="button" class="burger-menu">
             <svg class="icon-burger-menu" width="24px" height="24px">
@@ -52,12 +52,12 @@
               <a
                 class="contacts-list-link link"
                 href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
+                >swissmann@steffen-wissmann.de</a
               >
             </li>
             <li>
-              <a class="contacts-list-link link" href="tel:+110001111111"
-                >+11 (000) 111-11-11</a
+              <a class="contacts-list-link link" href="tel+02214745260"
+                >+(0221) 474-52-60</a
               >
             </li>
           </ul>
@@ -70,7 +70,9 @@
 
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <h1 class="hero-title">SWAP
+      
+          </h1>
           <button class="btn">Order Service</button>
         </div>
       </section>
@@ -553,12 +555,11 @@
         <div class="container-logo">
           <div class="container-style-footer-logo">
             <a class="footer-logo link" href="./index.html"
-              >Web<span class="logo-span">Studio</span></a
+              >Steffen<span class="logo-span">Wissmann</span></a
             >
           </div>
           <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
+            SWAP Die sinnvolle Alternative Steffen Wissmann Accounting Perfomance.
           </p>
         </div>
         <div class="container-social-links">
