--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
               <a
                 class="contacts-list-link link"
                 href="mailto:info@devstudio.com"
-                >swissmann@steffen-wissmann.de</a
-              >
+                >info@steffen-wissmann.de
             </li>
             <li>
               <a class="contacts-list-link link" href="tel+02214745260"
@@ -150,8 +149,8 @@
                 height="260"
               />
               <div class="item-name">
-                <h3 class="item-title">Mark Guerrero</h3>
-                <p class="item-text">Product Designer</p>
+                <h3 class="item-title">Steffen Wissmann</h3>
+                <p class="item-text">Dipl. Kfm. Wirtschaftsprüfer Steuerberater</p>
                 <ul class="social-links-list">
                   <li class="social-links-item">
                     <a
@@ -210,7 +209,7 @@
               />
               <div class="item-name">
                 <h3 class="item-title">Tom Ford</h3>
-                <p class="item-text">Frontend Developer</p>
+                <p class="item-text">Steuerberater</p>
                 <ul class="social-links-list">
                   <li class="social-links-item">
                     <a
@@ -635,7 +634,7 @@
 
     <!-- ============================== MODAL ============================== -->
 
-    <div class="modal-backdrop">
+    <div class="modal-backdrop
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg width="8" height="8" class="modal-close-icon">
