--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <main>
       <!-- ============================== SECTION-HERO ============================== -->
-
+<button class="open-modal-btn">Click me</button>
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">SWAP
@@ -143,8 +143,8 @@
             <li class="team-item">
               <img
                 srcset="./images/team/mark-guerrero@2x.jpg 2x"
-                src="./images/team/mark-guerrero.jpg"
-                alt="Mark Guerrero"
+                src="./images/hero/122343.png"
+                alt="Steffen Wissmann"
                 width="264"
                 height="260"
               />
@@ -202,13 +202,13 @@
             <li class="team-item">
               <img
                 srcset="./images/team/tom-ford@2x.jpg 2x"
-                src="./images/team/tom-ford.jpg"
-                alt="Tom Ford"
+                src="./images/hero/122343.png"
+                alt="Hanna Tovarchi"
                 width="264"
                 height="260"
               />
               <div class="item-name">
-                <h3 class="item-title">Tom Ford</h3>
+                <h3 class="item-title">Maya Wissmann</h3>
                 <p class="item-text">Steuerberater</p>
                 <ul class="social-links-list">
                   <li class="social-links-item">
@@ -261,14 +261,14 @@
             <li class="team-item">
               <img
                 srcset="./images/team/camila-garcia@2x.jpg 2x"
-                src="./images/team/camila-garcia.jpg"
-                alt="Camila Garcia"
+                src="./images/hero/122343.png"
+                alt="Sarah Kreft"
                 width="264"
                 height="260"
               />
               <div class="item-name">
-                <h3 class="item-title">Camila Garcia</h3>
-                <p class="item-text">Marketing</p>
+                <h3 class="item-title">Susanne Claßen</h3>
+                <p class="item-text">Steuerberater</p>
                 <ul class="social-links-list">
                   <li class="social-links-item">
                     <a
@@ -320,14 +320,14 @@
             <li class="team-item">
               <img
                 srcset="./images/team/daniel-wilson@2x.jpg 2x"
-                src="./images/team/daniel-wilson.jpg"
-                alt="Daniel Wilson"
+                src="./images/hero/122343.png"
+                alt="Sarah Kreft"
                 width="264"
                 height="260"
               />
               <div class="item-name">
-                <h3 class="item-title">Daniel Wilson</h3>
-                <p class="item-text">UI Designer</p>
+                <h3 class="item-title">Sarah Kreft</h3>
+                <p class="item-text">Finanzbuchalterin</p>
                 <ul class="social-links-list">
                   <li class="social-links-item">
                     <a
@@ -634,7 +634,7 @@
 
     <!-- ============================== MODAL ============================== -->
 
-    <div class="modal-backdrop
+    <div class="modal-backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg width="8" height="8" class="modal-close-icon">
@@ -801,5 +801,6 @@
         </ul>
       </div>
     </div>
+    <script src="modal.js"></script>
   </body>
 </html>
