--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
     <main>
       <!-- ============================== SECTION-HERO ============================== -->
-<button class="open-modal-btn">Click me</button>
+
       <section class="hero-section">
         <div class="container">
           <h1 class="hero-title">SWAP
       
           </h1>
-          <button class="btn">Order Service</button>
+          <button class="btn open-modal-btn">Order Service</button>
         </div>
       </section>
 
